Fix line wrapping issue on data source detailed reports

--- a/arms/src/applications/registry/data_source/assets/less/charts.less
+++ b/arms/src/applications/registry/data_source/assets/less/charts.less
@@ -41,4 +41,7 @@
 .widget-title
 {
 	padding-left:12px;
+	padding-right:12px;
+	height:100%;
+	
 }
